update metadata Added archival cover. tag 0.1.0

--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,11 +1,16 @@
 _repo: Radio-V-rays_73554
 _version: 0.1.0
+covers:
+- cover_type: archival
+  image_path: 73554-h/images/cover.jpg
 creator:
   author:
     agent_name: Dirk, Jan
     gutenberg_agent_id: '57114'
     url: http://www.gutenberg.org/2009/agents/57114
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/73554#Radio-V-rays
 gutenberg_issued: '2024-05-07'
 gutenberg_type: Text
 identifiers:
